--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication"
-        minSdk 23
+        minSdk 30
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -46,6 +46,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation "androidx.security:security-crypto:1.1.0-alpha03"
+    implementation("androidx.biometric:biometric:1.2.0-alpha04")
+
 //    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
